--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <h2 class="advice">advice # <span id="advice-number"></span></h2>
       <p class="advice-content" id="advice.content"></p>
       <div class="lines">
-        <div><img src="/images/pattern-divider-desktop.svg" alt=""></div>
+        <div><img src="images/pattern-divider-desktop.svg" alt=""></div>
       </div>
-      <div class="button" id="button"><img class="button-image" src="/images/icon-dice.svg" alt=""></div>
+      <div class="button" id="button"><img class="button-image" src="images/icon-dice.svg" alt=""></div>
     </div>
     
   </div>
